refactor(auth): 优化认证逻辑和菜单路由获取
- 修正了 Constants 中的 IS_EXTERNAL_LINK 和 NOT_EXTERNAL_LINK 值
- 优化了 SecurityUtils 中的登录用户获取逻辑，提高异常处理能力
- 修改了 SysAuthController 中的 getCurrentUserRoutes 方法，使用当前登录用户 ID
- 在 SysMenuConverter 中添加了新的转换方法，用于菜单树列表和菜单列表视图对象的转换